<resources>
    <string name="app_name">ChatApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="register">KAYDOL</string>
    <string name="already_have_an_account">Zaten bir hesabın var mı?</string>
    <string name="log_in">Giriş Yap</string>
    <string name="back_to_register_screen">Kaydolma Ekranına Dön</string>
    <string name="choose_your_profile_picture">Choose Your Profile Picture</string>
    <string name="new_message">New Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="gonder">Gönder</string>
    <string name="mesajinizi_girin">Mesajınızı Girin</string>
    <string name="friend_picture">Friend Picture</string>
</resources>